Changed folder name from "scan-report_probe" to "scanReport_probe"

--- a/src/scanReport_probe/makefile
+++ b/src/scanReport_probe/makefile
@@ -6,7 +6,7 @@ all: main
 
 # build it
 main: a.o
-	$(CC) $(LDFLAGS) a.o -o a
+	$(CC) $(LDFLAGS) a.o -o scanReportProbe
 
 a.o: a.c
 	$(CC) $(CFLAGS) -c a.c
