Added source files of first prototype

--- a/src/scanReportProbe/makefile
+++ b/src/scanReportProbe/makefile
@@ -1,16 +1,29 @@
-PROFILE = -O2 -s
-CFLAGS = $(PROFILE)
-LDFLAGS = 
+# Set the libraries to link
+LFLAGS += -lpcap
+CFLAGS += -O2 -s
+# Debug
+#CFLAGS += -g
 
-all: main
+# The target
+TARGET = scanReportProbe
+# Object files
+OBJECTS = scanReportProbe.o radiotap.o 
 
-# build it
-main: a.o
-	$(CC) $(LDFLAGS) a.o -o scanReportProbe
+all: $(TARGET)
 
-a.o: a.c
-	$(CC) $(CFLAGS) -c a.c
-	
-# clean it
+$(TARGET): $(OBJECTS)
+	$(CC) $(CFLAGS) $(OBJECTS) $(LFLAGS) -o $(TARGET)
+
+# Dependencies:
+
+radiotap.o: radiotap.h radiotap_iter.h platform.h
+
+
+# This is a predefined rule of makefile, it knows the dependencies and thus can compile the related ".c" files in to ".o"
+# The macro $< means "the first suffix of current target", i.e. ".c"
+.c.o:
+	$(CC) $(CFLAGS) -c $<
+
 clean:
-	rm *.o scanReportProbe
+	rm *.o
+	rm $(TARGET)
