--- a/src/scanReportProbe.conf
+++ b/src/scanReportProbe.conf
@@ -1,1 +1,16 @@
-ciao=ciao
+void config_init (config_t * config)
+
+curl_config_parameters : 
+	{	char *URL = "http://tribe.openia.it/MerakiCMXDataCollector/events?code=";		    //URL of the server
+		char *CODE = "UNIPING";			                       //Code by which is possible to get the validator
+		char *VALIDATOR = "f97ab62d-11fd-4f90-a352-e852ff684f4d";	                    //The local validator
+		char *PATH_CMX = "/usr/lib/probescan/path_cmx/";		   //The path in which the CMX files are stored
+ 		char *SECRET = "uniping-tribe";		                                                     //The secret 
+ 		char *MAC_AP = "E4:95:6E:40:8D:2E"; 		                             //MAC address of the GL-device
+	}
+	
+	/*
+	da definire con Luigi
+	-interfaccia
+	-tipo di pacchetto
+	*/
