--- a/src/scanReportProbe.conf
+++ b/src/scanReportProbe.conf
@@ -1,4 +1,7 @@
-void config_init (config_t * config)
+//void config_init (config_t * config) to initialize scanReportProbe.conf
+//void config_destroy (config_t * config) to destroy scanReportProbe.conf
+
+#version = "1.0";
 
 curl_config_parameters : 
 	{	char *URL = "http://tribe.openia.it/MerakiCMXDataCollector/events?code=";		    //URL of the server
@@ -12,5 +15,13 @@ curl_config_parameters :
 	/*
 	da definire con Luigi
 	-interfaccia
+	
+	interface : {
+	
+		}
+		
 	-tipo di pacchetto
+	pkg_type : {
+	
+		}
 	*/
