--- a/src/scanReportProbe.conf
+++ b/src/scanReportProbe.conf
@@ -1,8 +1,6 @@
-//void config_init (config_t * config) to initialize scanReportProbe.conf
-//void config_destroy (config_t * config) to destroy scanReportProbe.conf
+// version = "1.1";
 
-#version = "1.1";
-
+// configuration parameters
 curl_config_parameters : 
 	{	URL = "http://tribe.openia.it/MerakiCMXDataCollector/events?code=";		    //URL of the server
 		CODE = "UNIPING";			               //Code by which is possible to get the validator
@@ -12,6 +10,8 @@ curl_config_parameters :
  		MAC_AP = "E4:95:6E:40:8D:2E"; 		                        	 //MAC address of the GL-device
 	};
 	
+// intrface used
 interface = "mon0";
-		
+
+// package type		
 pkg_type = "sub-type probe-req";
